syntax = "proto3";
package web;

option go_package = "web/v1/question;web";

import "third_party/tagger/tagger.proto";

message GetQuestionListRequest {
  string search = 1 [(tagger.tags) = "form:\"search\""];
  int32 page = 2 [(tagger.tags) = "form:\"page\""];
  int32 number = 3 [(tagger.tags) = "form:\"number\""];
}

message GetQuestionListResponse {
  message QuestionItem {
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
    string title = 2 [(tagger.tags) = "binding:\"required\""];
    repeated string tag = 3 [(tagger.tags) = "binding:\"required\""];
    int32 degree = 4 [(tagger.tags) = "binding:\"required\""];
    float passing_rate = 5 [(tagger.tags) = "binding:\"required\""];
    int32 owner_id = 6 [(tagger.tags) = "binding:\"required\""];
  }

  repeated QuestionItem question_list = 1 [(tagger.tags) = "binding:\"required\""];
  int32 total = 2 [(tagger.tags) = "binding:\"required\""];
}

message GetQuestionDetailRequest {
  int32 id = 1 [(tagger.tags) = "form:\"id\""];
}

message GetQuestionDetailResponse {
  message QuestionItem {
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
    string title = 2 [(tagger.tags) = "binding:\"required\""];
    repeated string tag = 3 [(tagger.tags) = "binding:\"required\""];
    int32 degree = 4 [(tagger.tags) = "binding:\"required\""];
    float passing_rate = 5 [(tagger.tags) = "binding:\"required\""];
    int32 owner_id = 6 [(tagger.tags) = "binding:\"required\""];
    string content = 7 [(tagger.tags) = "binding:\"required\""];
  }

  QuestionItem question_item = 1 [(tagger.tags) = "binding:\"required\""];
}

message GetTestDataListRequest {
  int32 id = 1 [(tagger.tags) = "form:\"id\""];
}

message GetTestDataListResponse {
  message TestData {
    string input = 1 [(tagger.tags) = "binding:\"required\""];
    string output = 2 [(tagger.tags) = "binding:\"required\""];
  }

  repeated TestData test_data = 1 [(tagger.tags) = "binding:\"required\""];
}